--- a/api-reference/chat-profiles.mdx
+++ b/api-reference/chat-profiles.mdx
@@ -1,5 +1,5 @@
 ---
-title: "set_chat_profiles"
+title: "Chat Profiles"
 ---
 
 Decorator to define the list of chat profiles.
@@ -8,13 +8,13 @@ If authentication is enabled, you can access the user details to create the list
 
 The icon is optional.
 
-### Parameters
+## Parameters
 
 <ParamField path="current_user" type="User">
   The message coming from the UI.
 </ParamField>
 
-### Usage
+## Usage
 
 ```python Simple example
 import chainlit as cl
