--- a/api-reference/chat-settings.mdx
+++ b/api-reference/chat-settings.mdx
@@ -1,18 +1,18 @@
 ---
-title: "ChatSettings"
+title: "Chat Settings"
 ---
 
 The `ChatSettings` class is designed to create and send a dynamic form to the UI. This form can be updated by the user.
 
-### Attributes
+## Attributes
 
 <ParamField path="inputs" type="List[InputWidget]">
   The fields of the form
 </ParamField>
 
-### Usage
+## Usage
 
-```python Code Example
+```python
 import chainlit as cl
 from chainlit.input_widget import Select, Switch, Slider
 
