--- a/backend/config/features.mdx
+++ b/backend/config/features.mdx
@@ -5,8 +5,8 @@ title: Features
 ### Options
 
 <ParamField path="prompt_playground" type="bool" default={true}>
-  Display the [prompt playground](/observability-iteration/prompt-playground)
-  when passing a prompt to a message.
+  Display the [prompt playground](/advanced-features/prompt-playground) when
+  passing a prompt to a message.
 </ParamField>
 
 <ParamField path="unsafe_allow_html" type="bool" default={false}>
@@ -21,7 +21,7 @@ title: Features
 
 <ParamField path="multi_modal" type="bool" default={true}>
   Authorize users to upload files with messages. The files are then accessible
-  in [cl.on_message](/api-reference/on-message).
+  in [cl.on_message](/api-reference/lifecycle-hooks/on-message).
 </ParamField>
 
 <ParamField path="speech_to_text.enabled" type="bool" default={false}>
