--- a/backend/config/ui.mdx
+++ b/backend/config/ui.mdx
@@ -17,8 +17,7 @@ title: UI
 </ParamField>
 
 <ParamField path="hide_cot" type="bool" default={false}>
-  You can hide the [Chain of Thought](/observability-iteration/chain-of-thought)
-  UI.
+  You can hide the Chain of Thought UI.
 </ParamField>
 
 <ParamField path="default_collapse_content" type="bool" default={true}>
