--- a/concepts/message.mdx
+++ b/concepts/message.mdx
@@ -9,6 +9,8 @@ A message has a content, a timestamp and cannot be nested.
 
 ## Example: Reply to a user message
 
+Lets create a simple assistant that replies to a user message with a greeting.
+
 ```py
 import chainlit as cl
 
