--- a/concepts/user-session.mdx
+++ b/concepts/user-session.mdx
@@ -65,12 +65,14 @@ The following keys are reserved for chat session related data:
   user object of the user that started this chat session.
 </ParamField>
 <ParamField path="chat_profile" type="str">
-  Only relevant if you are using the [Chat Profiles](/features/chat-profiles)
-  feature. Contains the chat profile selected by this user.
+  Only relevant if you are using the [Chat
+  Profiles](/advanced-features/chat-profiles) feature. Contains the chat profile
+  selected by this user.
 </ParamField>
 <ParamField path="chat_settings" type="Dict">
-  Only relevant if you are using the [Chat Settings](/features/chat-settings)
-  feature. Contains the chat settings given by this user.
+  Only relevant if you are using the [Chat
+  Settings](/advanced-features/chat-settings) feature. Contains the chat
+  settings given by this user.
 </ParamField>
 <ParamField path="env" type="Dict" default="{}">
   Only relevant if you are using the [user_env](/backend/config/project) config.
