--- a/examples/cookbook.mdx
+++ b/examples/cookbook.mdx
@@ -2,9 +2,14 @@
 title: Cookbook
 ---
 
-The Cookbook repository serves as a valuable resource and starting point for developers looking to explore the capabilities of Chainlit in creating LLM apps. 
-It provides a diverse collection of **example projects**, each residing in its own folder, showcasing the integration of various tools such as **OpenAI, Anthropiс, LangChain, LlamaIndex, ChromaDB, Pinecone and more**. 
-Whether you are seeking basic tutorials or in-depth use cases, the Cookbook repository offers inspiration and practical insights! 
+The Cookbook repository serves as a valuable resource and starting point for developers looking to explore the capabilities of Chainlit in creating LLM apps.
 
-<Card title="https://github.com/Chainlit/cookbook" icon="github" href="https://github.com/Chainlit/cookbook">
-</Card>
+It provides a diverse collection of **example projects**, each residing in its own folder, showcasing the integration of various tools such as **OpenAI, Anthropiс, LangChain, LlamaIndex, ChromaDB, Pinecone and more**.
+
+Whether you are seeking basic tutorials or in-depth use cases, the Cookbook repository offers inspiration and practical insights!
+
+<Card
+  title="https://github.com/Chainlit/cookbook"
+  icon="github"
+  href="https://github.com/Chainlit/cookbook"
+></Card>
