--- a/examples/openai-sql.mdx
+++ b/examples/openai-sql.mdx
@@ -5,7 +5,7 @@ title: Text to SQL
 Let's build a simple app that helps users to create SQL queries with natural language.
 
 <Frame caption="Preview of the final result">
-  <img src="/images/text-to-sql.png" />
+  <video controls autoPlay loop muted src="/images/text-to-sql.mp4" />
 </Frame>
 
 ## Prerequisites
@@ -19,17 +19,18 @@ pip install chainlit openai
 ## Imports
 
 ```python app.py
-import chainlit as cl
-from chainlit.prompt import Prompt, PromptMessage
-from chainlit.playground.providers.openai import ChatOpenAI
-
-from openai import AsyncOpenAI
 import os
+from openai import AsyncOpenAI
+
+
+from chainlit.playground.providers.openai import ChatOpenAI
+import chainlit as cl
+
 
 client = AsyncOpenAI(api_key="YOUR_OPENAI_API_KEY")
 ```
 
-## Define a prompt and LLM settings
+## Define a prompt template and LLM settings
 
 ````python app.py
 template = """SQL tables (and columns):
@@ -51,50 +52,49 @@ settings = {
 }
 ````
 
-## Listen and Reply
+## Add the Assistant Logic
 
-Here, we decorate the `main` function with the [@on_message](/api-reference/on-message) decorator to tell Chainlit to run the `main` function each time a user sends a message.
-Then, we send back the answer to the UI with the [Message](/api-reference/message) class.
+Here, we decorate the `main` function with the [@on_message](/api-reference/lifecycle-hooks/on-message) decorator to tell Chainlit to run the `main` function each time a user sends a message.
+
+Then, we wrap our text to sql logic in a [Step](/concepts/step).
 
 ```python app.py
-@cl.on_message
-async def main(message: cl.Message):
-    # Create the prompt object for the Prompt Playground
-    prompt = Prompt(
+@cl.step(type="llm", root=True, language="sql")
+async def text_to_sql(text: str):
+    # Create a ChatGeneration to enable the prompt playground
+    generation = cl.ChatGeneration(
         provider=ChatOpenAI.id,
         messages=[
-            PromptMessage(
+            cl.GenerationMessage(
                 role="user",
                 template=template,
-                formatted=template.format(input=message.content)
+                formatted=template.format(input=text),
             )
         ],
         settings=settings,
-        inputs={"input": message.content},
-    )
-
-    # Prepare the message for streaming
-    msg = cl.Message(
-        content="",
-        language="sql",
+        inputs={"input": text},
     )
 
     # Call OpenAI
-
     stream = await client.chat.completions.create(
-        messages=[m.to_openai() for m in prompt.messages], stream=True, **settings
+        messages=[m.to_openai() for m in generation.messages], stream=True, **settings
     )
+
+    current_step = cl.context.current_step
 
     async for part in stream:
         if token := part.choices[0].delta.content or "":
-            await msg.stream_token(token)
+            await current_step.stream_token(token)
 
-    # Update the prompt object with the completion
-    prompt.completion = msg.content
-    msg.prompt = prompt
+    generation.completion = current_step.output
 
-    # Send and close the message stream
-    await msg.send()
+    current_step.generation = generation
+
+
+@cl.on_message
+async def main(message: cl.Message):
+    await text_to_sql(message.content)
+
 ```
 
 ## Try it out
@@ -104,5 +104,3 @@ chainlit run app.py -w
 ```
 
 You can ask questions like `Compute the number of customers who watched more than 50 minutes of video this month`.
-
-![SQL App](/images/text-to-sql.png)
