--- a/api-reference/step-decorator.mdx
+++ b/api-reference/step-decorator.mdx
@@ -22,6 +22,11 @@ Under the hood, the step decorator is using the [cl.Step](/api-reference/step-cl
   By default the step will be nested under the previous step/message. Set this
   to `True` to make it a root step.
 </ParamField>
+<ParamField path="language" type="str" optional>
+  Language of the output. See
+  https://react-code-blocks-rajinwonderland.vercel.app/?path=/story/codeblock--supported-languages
+  for a list of supported languages.
+</ParamField>
 <ParamField path="show_input" type="Union[bool, str]" default="False" optional>
   By default only the output of the step is shown. Set this to `True` to also
   show the input. You can also set this to a language like `json` or `python` to
