--- a/examples/mrkl.mdx
+++ b/examples/mrkl.mdx
@@ -18,7 +18,7 @@ pip install chainlit langchain openai google-search-results
 from langchain.chains import LLMMathChain
 from langchain.llms.openai import OpenAI
 from langchain.chat_models import ChatOpenAI
-from langchain.utilities import SerpAPIWrapper
+from langchain.utilities.serpapi import SerpAPIWrapper
 from langchain.agents import initialize_agent, Tool, AgentExecutor
 import os
 import chainlit as cl
