--- a/examples/qa.mdx
+++ b/examples/qa.mdx
@@ -38,11 +38,7 @@ from langchain.chains import (
     ConversationalRetrievalChain,
 )
 from langchain.chat_models import ChatOpenAI
-from langchain.prompts.chat import (
-    ChatPromptTemplate,
-    SystemMessagePromptTemplate,
-    HumanMessagePromptTemplate,
-)
+
 from langchain.docstore.document import Document
 from langchain.memory import ChatMessageHistory, ConversationBufferMemory
 
@@ -51,6 +47,7 @@ import chainlit as cl
 os.environ["OPENAI_API_KEY"] = "OPENAI_API_KEY"
 
 text_splitter = RecursiveCharacterTextSplitter(chunk_size=1000, chunk_overlap=100)
+
 
 @cl.on_chat_start
 async def on_chat_start():
@@ -67,13 +64,11 @@ async def on_chat_start():
 
     file = files[0]
 
-    msg = cl.Message(
-        content=f"Processing `{file.name}`...", disable_human_feedback=True
-    )
+    msg = cl.Message(content=f"Processing `{file.name}`...", disable_feedback=True)
     await msg.send()
 
-    # Decode the file
-    text = file.content.decode("utf-8")
+    with open(file.path, "r", encoding="utf-8") as f:
+        text = f.read()
 
     # Split the text into chunks
     texts = text_splitter.split_text(text)
