--- a/get-started/overview.mdx
+++ b/get-started/overview.mdx
@@ -18,7 +18,7 @@ Chainlit is an open-source Python package that makes it incredibly fast to build
 
 1. [Build fast:](/examples/openai-sql) Integrate seamlessly with an existing code base or start from scratch in minutes
 
-2. [Data persistence:](/data-persistence/overview) Leverage user generated data + feedback
+2. [Data persistence:](/data-persistence/overview) Collect, monitor and analyze data from your users
 
 3. [Visualize multi-steps reasoning:](/concepts/step) Understand the intermediary steps that produced an output at a glance
 
