--- a/api-reference/lifecycle-hooks/on-chat-end.mdx
+++ b/api-reference/lifecycle-hooks/on-chat-end.mdx
@@ -4,9 +4,9 @@ title: "on_chat_end"
 
 Hook to react to the user websocket disconnection event.
 
-### Usage
+## Usage
 
-```python Code Example
+```python
 import chainlit as cl
 
 
