--- a/api-reference/lifecycle-hooks/on-chat-resume.mdx
+++ b/api-reference/lifecycle-hooks/on-chat-resume.mdx
@@ -16,7 +16,7 @@ This decorator will automatically:
   reinstantiate and set it in the user session yourself.
 </Warning>
 
-### Usage
+## Usage
 
 <Card
   title="Resume Chat Example"
@@ -27,7 +27,7 @@ This decorator will automatically:
   Practical example of how to resume a chat with context.
 </Card>
 
-### Parameters
+## Parameters
 
 <ParamField path="conversation" type="ConversationDict">
   The persisted conversation to resume.
