--- a/api-reference/lifecycle-hooks/on-chat-start.mdx
+++ b/api-reference/lifecycle-hooks/on-chat-start.mdx
@@ -4,7 +4,7 @@ title: "on_chat_start"
 
 Hook to react to the user websocket connection event.
 
-### Usage
+## Usage
 
 ```python Code Example
 from chainlit import AskUserMessage, Message, on_chat_start
