--- a/api-reference/lifecycle-hooks/on-message.mdx
+++ b/api-reference/lifecycle-hooks/on-message.mdx
@@ -5,15 +5,15 @@ title: "on_message"
 Decorator to react to messages coming from the UI.
 The decorated function is called every time a new message is received.
 
-### Parameters
+## Parameters
 
 <ParamField path="message" type="cl.Message">
   The message coming from the UI.
 </ParamField>
 
-### Usage
+## Usage
 
-```python Code Example
+```python
 import chainlit as cl
 
 @cl.on_message
