--- a/api-reference/lifecycle-hooks/on-chat-resume.mdx
+++ b/api-reference/lifecycle-hooks/on-chat-resume.mdx
@@ -29,6 +29,6 @@ This decorator will automatically:
 
 ## Parameters
 
-<ParamField path="conversation" type="ConversationDict">
-  The persisted conversation to resume.
+<ParamField path="thread" type="ThreadDict">
+  The persisted chat to resume.
 </ParamField>
