step type is an enum

--- a/api-reference/step-class.mdx
+++ b/api-reference/step-class.mdx
@@ -9,7 +9,7 @@ The `Step` class is a Python Context Manager that can be used to create steps in
 <ParamField path="name" type="str" optional>
   The name of the step. Default to the name of the decorated function.
 </ParamField>
-<ParamField path="type" type="str" default="undefined" optional>
+<ParamField path="type" type="Enum" default="undefined" optional>
   The type of the step, useful for monitoring and debugging.
 </ParamField>
 <ParamField path="elements" type="List[Element]" optional>
