--- a/guides/migration/1.0.0.mdx
+++ b/guides/migration/1.0.0.mdx
@@ -48,3 +48,28 @@ The response of [AskUserMessage](/api-reference/ask/ask-for-input) has been slig
 File upload has been reworked to remove the size limit and vastly improve performance. The APIs stay the same with one exception.
 
 The file objects returned by [AskFileMessage](/api-reference/ask/ask-for-file) and [multi modal messages](/advanced-features/multi-modal) no longer have the `content` of the file. Instead they have a `path` field that can be used to manipulate the file.
+
+## Chainlit Cloud
+
+Chainlit Cloud has been replaced by our entirely new platform called [Literal AI](https://docs.getliteral.ai).
+
+Literal AI not only works out of the box with Chainlit apps but also with any other LLM app. Your historical data has been migrated automatically.
+
+In your Chainlit app, replace your API key definition with:
+
+```python
+# BEFORE
+CHAINLIT_API_KEY="YOUR_API_KEY"
+
+# AFTER
+LITERAL_API_KEY="YOUR_API_KEY"
+```
+
+Literal AI brings a lot of new features such as:
+
+- User analytics
+- Chat analytics
+- Detailed traces
+- Python & TypeScript SDKs to interact with your data
+
+and more!
