--- a/guides/migration/1.0.0.mdx
+++ b/guides/migration/1.0.0.mdx
@@ -59,7 +59,7 @@ In your Chainlit app, replace your API key definition with:
 
 ```python
 # BEFORE
-CHAINLIT_API_KEY="YOUR_API_KEY"
+LITERAL_API_KEY="YOUR_API_KEY"
 
 # AFTER
 LITERAL_API_KEY="YOUR_API_KEY"
