add info on data

--- a/guides/migration/1.0.0.mdx
+++ b/guides/migration/1.0.0.mdx
@@ -2,6 +2,11 @@
 title: Migration Guide to Chainlit v1.0.0
 ---
 
+<Note>
+  Find your data from cloud.chainlit.io at cloud.getliteral.ai (alpha version).
+  Join the discord for live updates: https://discord.gg/AzyvDHWARx
+</Note>
+
 ## Updating Chainlit
 
 Begin the migration by updating Chainlit to the latest version:
