--- a/get-started/overview.mdx
+++ b/get-started/overview.mdx
@@ -2,6 +2,13 @@
 title: "Overview"
 ---
 
+<Note>
+  Find your cloud data on cloud.getliteral.ai (alpha version). It was just migrated.
+
+  Join the discord for live updates: https://discord.gg/AzyvDHWARx
+</Note>
+
+
 Chainlit is an open-source Python package that makes it incredibly fast to build Chat GPT like applications with your own business logic and data.
 
 <Frame caption="Build Chat GPT like apps with Chainlit">
