--- a/authentication/password.mdx
+++ b/authentication/password.mdx
@@ -22,7 +22,7 @@ def auth_callback(username: str, password: str) -> Optional[cl.AppUser]:
   # Fetch the user matching username from your database
   # and compare the hashed password with the value stored in the database
   if (username, password) == ("admin", "admin"):
-    return cl.AppUser(identifier="admin", metadata={"role": "admin", "provider": "credentials"})
+    return cl.AppUser(username="admin", metadata={"role": "admin", "provider": "credentials"})
   else:
     return None
 ```
