--- a/get-started/overview.mdx
+++ b/get-started/overview.mdx
@@ -3,15 +3,15 @@ title: "Overview"
 ---
 
 <Note>
-  Find your cloud data on cloud.getliteral.ai (alpha version). It was just migrated.
+  Find your cloud data on [Literal AI](https://cloud.getliteral.ai) (alpha version). It was just migrated.
 
   Join the discord for live updates: https://discord.gg/AzyvDHWARx
 </Note>
 
 
-Chainlit is an open-source Python package that makes it incredibly fast to build Chat GPT like applications with your own business logic and data.
+Chainlit is an open-source Python package to build production ready Conversational AI.
 
-<Frame caption="Build Chat GPT like apps with Chainlit">
+<Frame caption="Build Conversational AI with Chainlit">
   <video
     controls
     autoPlay
@@ -25,11 +25,13 @@ Chainlit is an open-source Python package that makes it incredibly fast to build
 
 1. [Build fast:](/examples/openai-sql) Integrate seamlessly with an existing code base or start from scratch in minutes
 
-2. [Data persistence:](/data-persistence/overview) Collect, monitor and analyze data from your users
+2. [Copilot:](/deployment/copilot) Embed your chainlit app as a Software Copilot
 
-3. [Visualize multi-steps reasoning:](/concepts/step) Understand the intermediary steps that produced an output at a glance
+3. [Data persistence:](/data-persistence/overview) Collect, monitor and analyze data from your users
 
-4. [Iterate on prompts:](/advanced-features/prompt-playground) Deep dive into prompts in the Prompt Playground to understand where things went wrong and iterate
+4. [Visualize multi-steps reasoning:](/concepts/step) Understand the intermediary steps that produced an output at a glance
+
+5. [Iterate on prompts:](/advanced-features/prompt-playground) Deep dive into prompts in the Prompt Playground to understand where things went wrong and iterate
 
 ## Integrations
 
