--- a/deployment/tutorials.mdx
+++ b/deployment/tutorials.mdx
@@ -1,5 +1,5 @@
 ---
-title: Deployment
+title: Tutorials
 ---
 
 After you've successfully set up and tested your Chainlit application locally, the next step is to make it accessible to a wider audience by deploying it to a hosting service. This guide provides various options for self-hosting your Chainlit app, along with critical information you should be aware of before deploying.
