--- a/authentication/password.mdx
+++ b/authentication/password.mdx
@@ -2,7 +2,7 @@
 title: Password
 ---
 
-The `@cl.password_auth_callback` receives the username and password from the login form. Returning an `cl.User` object will authenticate the user while returning `None` will fail the authentication.
+The `@cl.password_auth_callback` receives the username and password from the login form. Returning an `cl.AppUser` object will authenticate the user while returning `None` will fail the authentication.
 
 You can verify the credentials against any service that you'd like (your own DB, a private google sheet etc.).
 
