fix config field casing

--- a/deployment/copilot.mdx
+++ b/deployment/copilot.mdx
@@ -44,7 +44,7 @@ export interface IWidgetConfig {
   // URL of the Chainlit server
   chainlitServer: string;
   // Whether to show the Chain of Thought. Only applicable if hide_cot is false on the server
-  show_cot?: boolean;
+  showCot?: boolean;
   // Required if authentication is enabled on the server
   accessToken?: string;
   // Theme of the copilot
