--- a/deployment/copilot.mdx
+++ b/deployment/copilot.mdx
@@ -28,7 +28,10 @@ First, make sure your Chainlit server is running. Then, add the following script
 That's it! You should now see a floating button on the bottom right corner of your website. Clicking on it will open the Copilot.
 
 <Note>
-If you plan to use [on_chat_start](/api-reference/lifecycle-hooks/on-chat-start) to welcome users, you should set [show_readme_as_default](/backend/config/ui) to `false` in your Chainlit config to avoid flickering.
+  If you plan to use
+  [on_chat_start](/api-reference/lifecycle-hooks/on-chat-start) to welcome
+  users, you should set [show_readme_as_default](/backend/config/ui) to `false`
+  in your Chainlit config to avoid flickering.
 </Note>
 
 <Frame caption="Copilot in action">
@@ -177,3 +180,4 @@ const accessToken = createJwt("user-1", { name: "John Doe" });
 Currently, Chainlit Copilot does not support:
 
 - User env
+- Chat history
