fix password auth example

--- a/authentication/password.mdx
+++ b/authentication/password.mdx
@@ -18,11 +18,13 @@ from typing import Optional
 import chainlit as cl
 
 @cl.password_auth_callback
-def auth_callback(username: str, password: str) -> Optional[cl.AppUser]:
-  # Fetch the user matching username from your database
-  # and compare the hashed password with the value stored in the database
-  if (username, password) == ("admin", "admin"):
-    return cl.AppUser(username="admin", metadata={"role": "admin", "provider": "credentials"})
-  else:
-    return None
+def auth_callback(username: str, password: str):
+    # Fetch the user matching username from your database
+    # and compare the hashed password with the value stored in the database
+    if (username, password) == ("admin", "admin"):
+        return cl.User(
+            identifier="admin", metadata={"role": "admin", "provider": "credentials"}
+        )
+    else:
+        return None
 ```
