--- a/deployment/copilot.mdx
+++ b/deployment/copilot.mdx
@@ -14,6 +14,9 @@ First, make sure your Chainlit server is running. Then, add the following script
 </Note>
 
 ```html
+<head>
+  <meta charset="utf-8" />
+</head>
 <body>
   <!-- ... -->
   <script src="http://localhost:8000/copilot/index.js"></script>
