serve html file warning

--- a/deployment/copilot.mdx
+++ b/deployment/copilot.mdx
@@ -28,6 +28,11 @@ First, make sure your Chainlit server is running. Then, add the following script
 </body>
 ```
 
+<Warning>
+  Remember the HTML file has to be served by a server, opening it directly in
+  your browser won't work. You can use simple HTTP server for tests purpose.
+</Warning>
+
 That's it! You should now see a floating button on the bottom right corner of your website. Clicking on it will open the Copilot.
 
 <Note>
